# libuint

./: .gitignore  Makefile  Makefile.in  README  README.md  configure  configure.ac  libuint
doc/: API  INSTALL
include/: libuint.h  libuint.h.in
src/: add.c  and.c  bit.c  div.c  example.c  io.c  libuint.c  mul.c  or.c  shift.c  sub.c  xor.c
